--- a/SphericalHarmonicsPaper/NIMA/authors.tex
+++ b/SphericalHarmonicsPaper/NIMA/authors.tex
@@ -1,8 +1,9 @@
-\author[UChicago]{Andrea Elagin\corref{cor1}}
-\cortext[cor1]{Corresponding Author: \href{mailto:an.email.address.here@somewhere.com}{\tt{an.email.address.here@somewhere.com}}}
-\author[UChicago]{Henry Frisch}
+\author[UChicago]{Andrey Elagin\corref{cor1}}
+\cortext[cor1]{Corresponding Author: \href{mailto:elagin@hep.uchicago.edu}{\tt{elagin@hep.uchicago.edu}}}
+\author[UChicago]{Henry J. Frisch}
+\author[MIT]{Jonathan Ouellet}
 \author[MIT]{Lindley Winslow}
-%\author[MIT]{Jonathan Ouellet}
 
-\address[UChicago]{ Enrico Fermi Institute, University of Chicago }
+
+\address[UChicago]{ Enrico Fermi Institute, University of Chicago, Chicago, IL, 60637 }
 \address[MIT]{ Massachusetts Institute of Technology, Cambridge, MA 02139 }
