--- a/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
+++ b/SphericalHarmonicsPaper/NIMA/10-Introduction.tex
@@ -49,8 +49,7 @@ isotope into the liquid scintillator (LS). This feature allows for
 rapid scaling to the 1~ton or more of active isotope. In a large LS
 detector, where backgrounds from the outside of the detector can be
 efficiently self-shielded or tagged and vetoed, the two backgrounds
-relavent to 0{\nbb} decay are 2{\nbb} and the charged-current
-quasielastic (CCQE) interaction of $^{8}$B solar neutrinos.
+relavent to 0{\nbb} decay are 2{\nbb} and electron scattering (ES) interactions of $^{8}$B solar neutrinos.
 
 Two neutrino double beta (2{\nbb}) decay is the Standard Model allowed
 second order $\beta$-decay channel where lepton number is conserved,
@@ -69,7 +68,7 @@ detectors will improve up this... \JOcom{Something about
   of slowing down the scintillation signal and improving the Cherenkov
   signal at the cost of decreasing the total light yield.}
 
-The spectrum of CCQE interactions of $^{8}$B solar neutrinos falls
+The spectrum of ES interactions of $^{8}$B solar neutrinos falls
 slowly over the range 2--3~MeV, creating a nearly flat background
 across the 0{\nbb} ROI. However, these interactions produce only a
 single $\sim$2.5~MeV electron, rather than two $\sim$1.2~MeV electrons
