small edits to first half

--- a/SphericalHarmonicsPaper/spherical_paper_v6.tex
+++ b/SphericalHarmonicsPaper/spherical_paper_v6.tex
@@ -104,7 +104,7 @@ The event topology of $\vbb$- and $\vvbb$-decays are very similar - both produce
 
 While the event topology of $\vvbb$-decay is very similar to the $\vbb$-decay, the topology of the next largest background coming from the $\B$ solar neutrino is sufficiently different and can be used to suppress this type of background. 
 
-$\B$ solar neutrino interactions produce only one electron. In a liquid scintillator detector the difference between two electrons and one electron will show up in the distribution of the Cherenkov photons. Abundant scintillation light makes it challenging to extract small Cherenkov light contribution from low energy electrons. However, as have been shown in our previous work, photo-detectors with time resolution of $\sim$100~ps can allow for selection of photons that contain significant fraction of Cherenkov light produced by 1-5~MeV electrons in a kilo-ton scale liquid scintillator detector. Cherenkov photons on average arrive to the detector surface earlier than scintillation light due to longer wavelength of the Cherenkov photons and a delay in the scintillation process. Thus early light primarily consist of Cherenkov photons.
+$\B$ solar neutrino interactions produce only one electron. In a liquid scintillator detector the difference between two electrons and one electron will show up in the distribution of the Cherenkov photons. Abundant scintillation light makes it challenging to extract small Cherenkov light contribution from low energy electrons. However, as have been shown in our previous work, photo-detectors with time resolution of $\sim$100~ps can allow for selection of photons that contain significant fraction of Cherenkov light produced by 1-5~MeV electrons in a kilo-ton scale liquid scintillator detector. Cherenkov photons on average arrive to the detector surface earlier than scintillation light due to longer wavelength of the Cherenkov photons and a delay in the scintillation process. Thus early light primarily consists of Cherenkov photons.
 
 In this paper we propose to use spherical harmonics to analyze distributions of the early photo-electrons (PE) for discrimination between $\B$ background and $\vbb$-decay signal.
 
@@ -143,15 +143,15 @@ line) are compared. The black vertical line illustrates a time cut at 33.5 ns. (
 \label{subsec:topology}
 %Signature of the $\vbb$-decay is two electrons with total kinetic energy equal to the isotope Q-value (e.g., 2.529~MeV for $\Te$). Therefore all $\vbb$-decay searches are designed to look for an excess of events in the energy spectrum around Q-value over the predicted number of background events. Backgrounds such as $\B$ solar neutrinos have distinct event topology that can be used to improve experimental sensitivity to the the $\vbb$-decay signal.
 
-Electrons in the energy range around Q-value of all isotopes considered for $\vbb$-decay searches are above Cherenkov threshold in liquid scintillators. Each electron above the threshold will produce a fuzzy ring of Cherenkov light at the detector surface. The fuzziness of the ring depends on electron scattering. In most cases Cherenkov rings from low energy electrons degrade to randomly shaped clusters of Cherenkov photons around direction of the electron track. 
+Electrons in the energy range around the Q-value of all isotopes considered for $\vbb$-decay searches are above Cherenkov threshold in liquid scintillators. Each electron above the threshold will produce a fuzzy ring of Cherenkov light at the detector surface. The fuzziness of the ring depends on electron scattering. In most cases Cherenkov rings from low energy electrons degrade to randomly shaped clusters of Cherenkov photons around the direction of the electron track. 
 
-Large fraction of $\vbb$-decay events will have two Cherenkov clusters~\footnote{Only one Cherenkov cluster is produced when either the angle between the two $\vbb$-decay electrons is too small or when the energy splits between the electrons in such a way that one electron falls below the Cherenkov threshold.} as opposed to one cluster from $\B$ events. Therefore separation of $\vbb$-decay signal from $\B$ background depends on ability to identify topology of the Cherenkov light on the detector sphere on top of uniformly distributed scintillation light. We show that analysis of spherical harmonics of the early photons allows to achieve noticeable separation between $\vbb$-decay and $\B$ events.
+A large fraction of $\vbb$-decay events will have two Cherenkov clusters~\footnote{Only one Cherenkov cluster is produced when either the angle between the two $\vbb$-decay electrons is too small or when the energy splits between the electrons in such a way that one electron falls below the Cherenkov threshold.} as opposed to one cluster from $\B$ events. Therefore, accurately distinguishing between a $\vbb$-decay signal from a $\B$ background event depends on the ability to identify the topology of Cherenkov light on the detector sphere on top of uniformly distributed scintillation light. We show that an analysis of spherical harmonics on the spatial distribution of early photons can be used to separate $\vbb$-decay and from $\B$ events.
 
 
 
 %The simplest case for spherical harmonics analysis are events with the vertex located exactly in the center of the detector. For such event Cherenkov and scintillation light can be separated by applying a time cut on the photon arrival time as demonstrated in~\cite{Directionality}. To introduce the technique of spherical harmonics analysis we will follow the same strategy as in~\cite{Directionality} and use central events with a slightly different cut on the photon arrival time of 33.5~ns.
 
-In order to illustrate differences between different event topologies we introduce three event topologies: two electrons produced back-to-back at 180$^{\circ}$ angle, two electrons at 90$^{\circ}$ angle, and a single electron. The two former are representative topologies of $\vbb$-decay signal events and the latter represents $\B$ background events. Figure~\ref{fig:Display_top_5MeV} shows Cherenkov photon distributions of 5~MeV electrons for each of the three topology. Overlay of 100 events with no QE applied is shown in order to make Cherenkov rings visible.
+In order to illustrate differences between different event topologies we introduce three example event topologies: two electrons produced back-to-back at 180$^{\circ}$ angle, two electrons at 90$^{\circ}$ angle, and a single electron. The first two are representative of topologies for $\vbb$-decay signal events while the latter represents $\B$ background events. Figure~\ref{fig:Display_top_5MeV} shows Cherenkov photon distributions of 5~MeV electrons for each of the three topologies. An overlay of 100 events is shown in order to make Cherenkov rings visible. Note that in this overlay, we assumed a quantum efficiency (QE) of one for the photodetectors.
 
 \begin{figure}[htb]
 \centering
@@ -162,7 +162,7 @@ In order to illustrate differences between different event topologies we introdu
 \label{fig:Display_top_5MeV}
 \end{figure}
 
-Cherenkov clusters that form at lower energies are shown in Fig.~\ref{fig:Display_top_2p5MeV}. All Cherenkov photons produced in a single event are shown for the three event topologies with total kinetic energy of 2.529~MeV that corresponds to Q-value of $\Te$. One can try to guess the event topology by comparing different segments of the detector sphere.
+Cherenkov clusters that form at lower energies are shown in Fig.~\ref{fig:Display_top_2p5MeV}. All Cherenkov photons produced in a single event are shown for the three event topologies with total kinetic energy of 2.529~MeV.  This energy corresponds to the Q-value of $\Te$. One can try to guess the event topology by comparing different segments of the detector sphere.
 
 \begin{figure}[htb]
 \centering
@@ -173,7 +173,7 @@ Cherenkov clusters that form at lower energies are shown in Fig.~\ref{fig:Displa
 \label{fig:Display_top_2p5MeV}
 \end{figure}
 
-More realistic examples of $\Te$ $\vbb$-decay and $\B$ events simulated at the center of the detector are shown in Fig.~\ref{fig:Display_Te130}. Early PEs from Cherenkov and scintillation light are shown. Default simulation QE is applied. Time cut of 33.5~ns on the photon arrival time is used to select early PEs. Uniformly distributed scintillation light make it more difficult to guess the event topology. Nevertheless we show that there is still sufficient difference in the spatial distribution of the early PEs to separate two track and single track events.
+More realistic examples of $\Te$ $\vbb$-decay and $\B$ events simulated at the center of the detector are shown in Fig.~\ref{fig:Display_Te130}. Early photoelectrons (PEs) from Cherenkov and scintillation light are shown. Unlike the above examples, a QE of is applied {\bf what is this QE?}.  A time cut of 33.5~ns on the photon arrival time is used to select early PEs. In this more realistic example, uniformly distributed scintillation light makes it more difficult to guess the event topology. Nevertheless we show that there is still sufficient difference in the spatial distribution of the early PEs to separate two track and single track events using the spherical harmonics analysis.
 
 \begin{figure}[htb]
 \centering
@@ -187,40 +187,41 @@ More realistic examples of $\Te$ $\vbb$-decay and $\B$ events simulated at the c
 
 
 %$\vbb$-decay events become indistinguishable from single track topology when the angle between two electrons is small
-For quantitative description of the difference in the event topology we analyze spherical harmonics of the photon distributions on the detector sphere. We construct rotation invariant variables and compare them between signal and background events. As it is shown in the bottom part of Fig.~\ref{fig:Display_Te130} $\vbb$-decay become indistinguishable from single track topology when the angle between two electrons is small (two degenerate tracks). Event topologies of $\vbb$-decay and $\B$ events are also very similar when only one electron from $\vbb$-decay is above the Cherenkov threshold. Therefore spherical harmonics analysis is most efficient for events with large angular separation between the two electrons and when both electrons are above Cherenkov threshold. 
+For a quantitative description of the difference in the event topology, we analyze spherical harmonics of the photon distributions on the detector sphere. We construct rotation invariant variables and compare them between signal and background events. As shown in the bottom part of Fig.~\ref{fig:Display_Te130}, $\vbb$-decay events become indistinguishable from single track topology when the angle between the two electrons is small (two degenerate tracks). Event topologies of $\vbb$-decay and $\B$ events are also very similar when only one electron from $\vbb$-decay is above the Cherenkov threshold. Therefore spherical harmonics analysis is most efficient for events with large angular separation between the two electrons and when both electrons are above Cherenkov threshold. 
 
-In this paper we focus on topological difference between two tracks and single track events and do not make any attempt to use absolute directional information to suppress single track events  where direction of the track is consistent with the direction of solar neutrinos. Once a single track topology is established one can use a centroid method (see Ref.~\cite{Directionality}) to reconstruct directionality of the track (or two degenerate tracks) and suppress events that are aligned with the direction of $\B$ solar neutrinos.
+In this paper we focus on topological difference between two tracks and single track events and do not make any attempt to use absolute directional information to suppress single track events. For example, one might reject events where the direction of the track is consistent with the direction of solar neutrinos. Once a single track topology is established one can use a centroid method (see Ref.~\cite{Directionality}) to reconstruct directionality of the track (or two degenerate tracks) and suppress events that are aligned with the direction of $\B$ solar neutrinos.
 
 \subsection{Description of Spherical Harmonics Analysis}
-A function $f(\theta,\phi)$ can be decomposed to a sum of spherical harmonics:
+
+A function $f(\theta,\phi)$ can be decomposed into a sum of spherical harmonics:
 
 \begin{eqnarray}
 \label{eq1}
 f(\theta,\phi) = \sum_{l=0}^{\infty} \sum_{m=-l}^{l} f_{lm} Y_{lm}(\theta,\phi),
 \end{eqnarray}
 
-where $Y_{lm}$ are Laplace's spherical harmonics defined in real-value basis using Legendre polynomials $P_l$:
+where $Y_{lm}$ are Laplace's spherical harmonics defined in a real-value basis using Legendre polynomials $P_l$:
 
 \begin{eqnarray}
 \label{eq2}
 Y_{lm} = LONGformulaHERE,
 \end{eqnarray}
 
- where  coefficients $f_{lm}$ are defined as
+where coefficients $f_{lm}$ are defined as
  
 \begin{eqnarray}
 \label{eq3}
 f_{lm} = LONGformulaHERE.
 \end{eqnarray}
 
-Equation~\ref{eq4} defines power spectrum of $f(\theta,\phi)$ in spherical harmonics representation, $s_l$, where $l$ is a multiple moment. The power spectrum $s_l$ is invariant under rotation. It is unique to each of the functions $f_i(\theta,\phi)$, $i=$1,2,3..., that can not be transformed into each other by rotation.
+Equation~\ref{eq4} defines the power spectrum of $f(\theta,\phi)$ in the spherical harmonics representation, $s_l$, where $l$ is a multiple moment. The power spectrum, $s_l$, is invariant under rotation. It is unique to each of the functions $f_i(\theta,\phi)$, $i=$1,2,3..., that can not be transformed into each other by rotation.
 
 \begin{eqnarray}
 \label{eq4}
 s_l = \sum_{m=-l}^{m=l} |f_{lm}|^2
 \end{eqnarray}
 
-One can consider PEs distribution for each of $\vbb$-decay signal or background event as a function $f_i(\theta,\phi)$. Events with similar power spectrum would correspond to PE distributions on the detector sphere that can be closely aligned by a rotation. Such PE distributions belong to events with similar topology.
+One can consider the spatial PEs distribution for each $\vbb$-decay signal or background event as a function $f_i(\theta,\phi)$. Events with similar power spectrum would correspond to PE distributions on the detector sphere that can be closely aligned by a rotation. Such PE distributions belong to events with similar topology.
 
 Topology of $\vbb$-decay signal or background in a spherical detector determines the distribution of the PE's on the detector sphere and therefore a set of $s_l$'s can serve as a quantitative figure of merit for different event topologies. Rotation invariance of $s_l$'s ensures that this figure of merit does not depend on the orientation of the event with respect to the chosen coordinate frame.
 
