--- a/ScintillatorPaper/ScintillatorPaper.tex
+++ b/ScintillatorPaper/ScintillatorPaper.tex
@@ -31,7 +31,7 @@ Liquid scintillators are composed of a organic solvent with secondary wavelength
 
 In previous work, we performed preliminary studies on the light yield of a quantum-dot-doped liquid scintillator\cite{qd1}. This work was followed up by a more detailed study of the chemistry and energy transfer in quantum-dot-doped scintillator including preliminary purification studies\cite{qd2}. This is part of a greater effort to develop a directional liquid scintillator detector. By narrowing the scintillation emission spectrum, the scintillation light is more efficiently separated from the directional Cherenkov improving the detectors ability to reconstruct a particle's direction\cite{direction}.
 
-In this work, we measure the light yields of simple scintillator cocktails made from the six most common solvents to determine the best solvent for a quantum-dot-doped liquid scintillator. We use 2,5-Diphenyloxazole (PPO) as the primary wavelength shifter.  The details of these solvents and the PPO used are listed in Table~ \ref{solvents_table}. We study the light yield as a function of PPO concentration. These results are then compared to the light yields of a selection of currently available QDs, see Table~\ref{quantum_dots_table}, disolved in a scintillator cocktail of toluene with 2~g/L of PPO. Additional measurements of the absorption and emission spectra of the QD samples are made to understand the observed reduced light yields.
+In this work, we measure the light yields of simple scintillator cocktails made from the six most common solvents to determine the best solvent for a quantum-dot-doped liquid scintillator. We use 2,5-Diphenyloxazole (PPO) as the primary wavelength shifter.  The details of these solvents and the PPO used are listed in Table~ \ref{solvents_table}. We study the light yield as a function of PPO concentration. These results are then compared to the light yields of a selection of currently available QDs, see Table~\ref{quantum_dots_table}, dissolved in a scintillator cocktail of toluene with 2~g/L of PPO. Additional measurements of the absorption and emission spectra of the QD samples are made to understand the observed reduced light yields.
 
 \begin{table}
 \caption{The solvents used in this paper, their names, abbreviations, corresponding IUPAC names, CAS numbers and information on the source of the chemicals. The primary wavelength shifter PPO is included for completeness. \label{solvents_table}}
@@ -104,7 +104,7 @@ The light yield of the candidate liquid scintillators was measured using the cha
 \subsection{Light Yield Measurements}
 \label{ly_setup_sec}
 
-The setup for the light yield measurements is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) holds the scintillator mixtures. The cell is coupled to the PMT with transparent silicone optical grease (Saint Gobain BC-630) with a similar index of refraction to the cell and PMT glass so that light losses due to reflection are minimized. The quartz cell is then secured in a reflective white Teflon block to further increase the light collection efficiency. The scintillator is excited by a ${^{137}}$Cs source with an activity of $\approx$1~$\mu$Ci (=37~kBq). The source is attached to the outside of the Teflon block. Isotope ${^{137}}$Cs undergoes beta decay with the subsequent emission of a single 662 keV gamma. The emitted gamma rays enter the quartz cell, then typically Compton scatter with electrons, which excite the scintillator. Cherenkov light is also produced from electrons with energies above a given threshold as discussed in Section  \ref{qd_sec} . A fraction of the emitted optical photons hit the photocathode of a Hamamatsu R1828-01 PMT \cite{hamamatsupmt}. A Hamamatsu E2979-500 base \cite{hamamatsubase} is used, and the high voltage of -1675~V is provided by a LeCroy 1454 high voltage system. The charge incident on the photocathode produce pulses which are recorded by an AlazarTech ATS9870 PCI waveform digitizer \cite{alazartech}. 
+The setup for the light yield measurements is illustrated in Figure \ref{setup_fig}. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) holds the scintillator mixtures. The cell is coupled to the PMT with transparent silicone optical grease (Saint Gobain BC-630) with a similar index of refraction to the cell and PMT glass so that light losses due to reflection are minimized. The quartz cell is then secured in a reflective white Teflon block to further increase the light collection efficiency. The scintillator is excited by a ${^{137}}$Cs source with an activity of $\approx$1~$\mu$Ci (=37~kBq). The source is attached to the outside of the Teflon block. Isotope ${^{137}}$Cs undergoes beta decay with the subsequent emission of a single 662 keV gamma. The emitted gamma rays enter the quartz cell, then typically Compton scatter with electrons, which excite the scintillator. Cherenkov light is also produced from electrons with energies above a given threshold as discussed in Section  \ref{intro} . A fraction of the emitted optical photons hit the photocathode of a Hamamatsu R1828-01 PMT \cite{hamamatsu}. A Hamamatsu E2979-500 base \cite{hamamatsu} is used, and the high voltage of -1675~V is provided by a LeCroy 1454 high voltage system. The charge incident on the photocathode produce pulses which are recorded by an AlazarTech ATS9870 PCI waveform digitizer \cite{alazartech}. 
 
 %Was there supposed to be something here?
 %\subsubsection{Photomultiplier Tube Calibration}
@@ -124,7 +124,7 @@ The coupling of the cell to the PMT is done consistently, and the PMT is aligned
 
 \subsection{Absorption and Emission Spectrum Measurements}
 
-A Perkin Elmer Lambda 25 UV/Vis is used for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. Both instruments utilize a double-beam setup. White light from deuterium UV lamp and a halogen lamp produce the beams. \cite{|}
+A Perkin Elmer Lambda 25 UV/Vis is used for measuring the emission spectrum and a Shimadzu UV3101 for measuring absorption spectrum of the QD doped liquid scintillators. Both instruments utilize a double-beam setup. White light from deuterium UV lamp and a halogen lamp produce the beams. \cite{perkinelmer, shimadzu}
 
 To measure the absorption spectrum of each quantum-dot sample, the following procedure is executed. A (1~cm$\times$1~cm$\times$3.5~cm) UV-transparent quartz cell (Starna 21-Q-10 \cite{starnacells}) is rinsed with toluene to dissolve any residue on the wall. Next, the cell is soaked in hydrochloric acid for 5 minutes to clean the cell and destroy any remaining QD. To wash away the hydrochloric acid and the residue QD constituents, the quartz cell is rinsed with distilled water and is then subjected to three iterations of liquid isopropyl alcohol evaporated by nitrogen gas. Since all of the QD samples are dissolved in toluene, a background absorption spectrum analysis is required to isolate the quantum-dot spectrum.  For absorption measurements, a background scan is performed with a vial filled with pure toluene. The toluene is then replaced with the QD sample, and the absorption scan is performed.  The emission spectrum does not require a background toluene scan.
 
@@ -229,19 +229,18 @@ As clearly stated in Table \ref{Toluene_ChargeResults_fig}, toluene produces the
 \subsection{Emission and Aborption Spectrum of Quantum-Dot Doped Liquid Scintillators}
 
 \subsubsection{Signal Analysis}
-Various trials are conducted to test the output signal of both the Perkin Elmer Lambda 25 UV/Vis and the Shimadzu UV3101 spectrophotometers\cite{lindley13}. The error is described by the following equation:
- \ref{Absorption_equ}.
+Various trials are conducted to test the output signal of both the Perkin Elmer Lambda 25 UV/Vis and the Shimadzu UV3101 spectrophotometers. The error is described by the following equation:
 
 \begin{equation}
 \label{Absorption_equ}
 A(x)=\log_{10}\Big(\frac{I(x)}{I(0)}\Big)
 \end{equation}
-where  $I(0)$ is the intensity of the beam before transiting the quartz cell and $I(x)$ is the intensity after it passes through the cell. 
+where  $I(0)$ is the intensity of the beam before transiting the quartz cell and $I(x)$ is the intensity after it passes through the cell \cite{qd2}. 
 
-The errors for the Perkin and Shimadzu spectrophotometers are $A=\pm0.00075$ and $A=\pm0.002$ respectfully. These errors are in close agreement with the manufactures specifications\cite{?}.
+The errors for the Perkin and Shimadzu spectrophotometers are $A=\pm0.00075$ and $A=\pm0.002$ respectfully. These errors are in close agreement with the manufactures specifications\cite{perkinelmer, shimadzu}.
 
 \subsubsection{Absorption and Emission Results}\label{abs_emi_results}
-The absorption and emission spectrum of the QDs were extensively probed, and the results are graphed in Figures \ref{abs_spec} and \ref{emi_spec} respectfully. As stated in Section \ref{qd_sec} and proved in \ref{ly_results}, the light yield of the QD doped scintillators is much lower than that of the binary mixture of toluene with PPO. This is due to the overlap in emission and absorption QD spectrum coupled with low quantum efficiency \cite{lindley14}. (I'm creating a figure that shows the overlap for emission and absorption for each quantum dot). The absorption spectrum of the QD doped liquid scintillators are narrower than that of toluene doped with 2 g/L PPO.
+The absorption and emission spectrum of the QDs were extensively probed, and the results are graphed in Figures \ref{abs_spec} and \ref{emi_spec} respectfully. As stated in Section \ref{intro} and demonstrated in \ref{ly_analysis_sec}, the light yield of the QD doped scintillators is much lower than that of the binary mixture of toluene with PPO. This is due to the overlap in emission and absorption QD spectrum coupled with low quantum efficiency \cite{direction}. (I'm creating a figure that shows the overlap for emission and absorption for each quantum dot). The absorption spectrum of the QD doped liquid scintillators are narrower than that of toluene doped with 2 g/L PPO.
 (How can we back this? Need to take an absorption and emission scan of toluene + 2g/L PPO.)
 %Discuss the shift of emission spectrum (Measure Toluene with PPO emission Spectrum)
 
@@ -288,103 +287,58 @@ Regrettably, QDs significantly reduce the light yield of scintillators. With imp
 \bibitem{raghavan76}
 R.S.~Raghavan, \emph{Inverse $\beta$ Decay of $^{115}$In$\rightarrow$ $^{115}$Sn$^{*}$: A New Possibility for Detecting Solar Neutrinos from the Proton-Proton Reaction}, \emph{Phys. Rev. Lett.} {\bf37} (1976) 259.
 
-\bibitem{majorana37}
-E.~Majorana, \emph{Teoria simmetrica dell'elettrone e del positrone}, \emph{Il Nuovo Cimento} {\bf 14} (1937) 171. 
-
-\bibitem{furry39}
-W.H.~Furry, \emph{On Transition Probabilities In Double Beta-Disintegration}, \emph{Phys. Rev.} {\bf 56} (1939) 1184. 
-
-\bibitem{Zuber}
-K.~Zuber, \emph{Neutrino Physics}, Taylor and Francis Group, 2004.
-
-\bibitem{tabledb95}
-V.I.~Tretyak, Y.G.~Zdesenko, \emph{Tables of double beta decay data}, \emph{Atomic Data and Nuclear Data Tables} {\bf 61} (1995) 43. 
-
-\bibitem{elliott02}
-S.R.~Elliott and P.~Vogel, \emph{Double Beta Decay}, \href{http://www.annualreviews.org/doi/abs/10.1146/annurev.nucl.52.050102.090641}{\emph{Annu. Rev. Nucl. Part. S.} {\bf 52} (2002) 115}.
-
-\bibitem{barabash11}
-A.~Barabash, \emph{Double beta decay experiments}, Phys. Part. Nucl. {\bf 42} (2011) 613 [\href{http://arxiv.org/abs/1107.5663}{arXiv:1107.5663}].
-
-\bibitem{schwingenheuer13}
-B.~Schwingenheuer, \emph{Status and prospects of searches for neutrinoless double beta decay}, \emph{Ann. Phys.} {\bf 525} (2013) 269.
-
-\bibitem{cremonesi13}
-O.~Cremonesi and M.~Pavan, \emph{Challenges in Double Beta Decay}, \href{http://arxiv.org/abs/1310.4692}{arXiv:1310.4692}.
-
-\bibitem{schechter82}
-J.~Schechter and J.W.F.~Valle, \emph{Neutrinoless double-$\beta$ decay in SU(2)$\times$U(1) theories}, \emph{Phys. Rev. D} {\bf 25} (1982) 2951.  
-
-\bibitem{klapdor04}
-H.V.~Klapdor-Kleingrothaus, I.V.~Krivosheina, A.~Dietz and O.~Chkvorets, \emph{Search for neutrinoless double beta decay with enriched 76Ge in Gran Sasso 1990-2003}, \emph{Phys. Lett. B} {\bf 586} (2004) 198.
-
-\bibitem{klapdor06}
-H.V.~Klapdor-Kleingrothaus and I.~Krivosheina, \emph{The evidence for the observation of 0$\nu\beta\beta$ decay: the identification of 0$\nu\beta\beta$ events from the full spectra}, \emph{Mod. Phys. Lett. A} {\bf 21} (2006) 1547 (2006).
-
-\bibitem{heidelbergmoscow01}
-H.V.~Klapdor-Kleingrothaus et al. (Heidelberg-Moscow Collaboration), \emph{Latest results from the HEIDELBERG-MOSCOW double beta decay experiment}, \emph{Eur. Phys. J. A} {\bf 12} (2001) 147.
-
-\bibitem{gerda13}
-M.~Agostini et al. (GERDA collaboration), \emph{Results on Neutrinoless Double-$\beta$ Decay of $^{76}$Ge from Phase I of the GERDA Experiment}, \emph{Phys. Rev. Lett.} {\bf 111} (2013) 122503. 
-
-\bibitem{kamlandzen13}
-A.~Gando et al. (KamLAND-Zen Collaboration), \emph{Limit on Neutrinoless $\beta\beta$ Decay of $^{136}$Xe from the First Phase of KamLAND-Zen and Comparison with the Positive Claim in $^{76}$Ge}, \emph{Phys. Rev. Lett.} {\bf 110} (2013) 062502.
-
-\bibitem{snoplus10}
+\bibitem{SNO+}
 C.~Kraus, S.J.M.~Peeters, \emph{The rich neutrino programme of the SNO+ experiment}, \emph{Prog. Part. Nucl. Phys.} {\bf 64} (2010) 273.
 
-\bibitem{hartnell12}
-J.~Hartnell for the SNO+ collaboration, \emph{Neutrinoless Double Beta Decay with SNO+}, \emph{J. Phys. Conf. Ser.} {\bf 375} (2012) 042015.
+\bibitem{KZ} 
+A.~Gando et al. (KamLAND-Zen Collaboration), \emph{Limit on Neutrinoless $\beta\beta$ Decay of $^{136}$Xe from the First Phase of KamLAND-Zen and Comparison with the Positive Claim in $^{76}$Ge}, \emph{Phys. Rev. Lett.} {\bf 110} (2013) 062502.
+
+\bibitem{qd1} 
+  L.~Winslow and R.~Simpson,
+  `\emph{Characterizing Quantum-Dot-Doped Liquid Scintillator for Applications to Neutrino Detectors}, \jinst{7}{2012}{P07010}
+  
+\bibitem{qd2} 
+C.~Aberle, J.J.~Li, S.~Weiss and L.~Winslow, \emph{Optical properties of quantum-dot-doped liquid scintillators}, \jinst{8}{2013}{P10015}.
+
+\bibitem{direction} 
+C.~Aberle, J.J.~Li, S.~Weiss and L.~Winslow, \emph{Measuring directionality in double-beta decay and neutrino interactions with kiloton-scale scintillation detectors }, \jinst{9}{2014}{P06012}.
+
+ \bibitem{sigmaaldrich}
+http://www.sigmaaldrich.com, 2014.
+
+\bibitem{cepsa}
+http://www.cepsa.com, 2014. 
+
+\bibitem{dixiechemical}
+http://www.dixiechemical.com, 2014.
+
+\bibitem{perkinelmer}
+http://www.perkinelmer.com, 2014.
+
+\bibitem{nnLabs}
+http://www.nn-labs.com, 2014.
+
+\bibitem{mkNano}
+http://mknano.com, 2014.
+
+ \bibitem{oceanNanotech}
+ http://www.oceannanotech.com, 2014.
+ 
+ 
+ \bibitem{crystalplex}
+ http://www.crystalplex.com, 2014.
+
+\bibitem{starnacells}
+http://www.starnacells.com, 2014.  
+
+\bibitem{hamamatsu}
+ http://www.hamamatsu.com, 2014
+
+\bibitem{alazartech}
+http://www.alazartech.com, 2014.
 
 \bibitem{birks64}
 J.B.~Birks, \emph{The Theory and Practice of Scintillation Counting}, Pergamon Press, 1964.
-
-\bibitem{buck15} 
-  C.~Buck, B.~Gramlich and S.~Wagner,
-  \emph{Light propagation and fluorescence quantum yields in liquid scintillators}, \jinst{10}{2015}{P09007}
-  JINST {\bf 10}, no. 09, P09007 (2015)
-  %[arXiv:1509.02327 [physics.ins-det]].
-  %%CITATION = ARXIV:1509.02327;%%
-
-\bibitem{lindley12} 
-  L.~Winslow and R.~Simpson,
-  `\emph{Characterizing Quantum-Dot-Doped Liquid Scintillator for Applications to Neutrino Detectors}, \jinst{7}{2012}{P07010}
-  %[arXiv:1202.4733 [physics.ins-det]].
-  %%CITATION = ARXIV:1202.4733;%%
-  %5 citations counted in INSPIRE as of 02 Oct 2015
-
-\bibitem{lindley14}
-C.~Aberle, J.J.~Li, S.~Weiss and L.~Winslow, \emph{Measuring directionality in double-beta decay and neutrino interactions with kiloton-scale scintillation detectors }, \jinst{9}{2014}{P06012}.
-
-\bibitem{lindley13}
-C.~Aberle, J.J.~Li, S.~Weiss and L.~Winslow, \emph{Optical properties of quantum-dot-doped liquid scintillators}, \jinst{8}{2013}{P10015}.
-
-\bibitem{sigmaaldrich}
-http://www.sigmaaldrich.com (2014).
-
-\bibitem{cepsa}
-http://www.cepsa.com (2014). 
-
-\bibitem{dixiechemical}
-http://www.dixiechemical.com (2014).
-
-\bibitem{perkinelmer}
-http://www.perkinelmer.com (2014).
-
-\bibitem{nnLabs}
-http://www.nn-labs.com (2014).
-
-\bibitem{mkNano}
-http://mknano.com (2014).
-
- \bibitem{oceanNanotech}
- http://www.oceannanotech.com (2014).
- 
- \bibitem{crystalplex}
- http://www.crystalplex.com (2014).
-
-\bibitem{starnacells}
-http://www.starnacells.com (2014).  
 
 \bibitem{foerster48}
 T.~F\"orster, \emph{Zwischenmolekulare Energiewanderung und Fluoreszenz}, \emph{Ann. Phys.} {\bf 2} (1948) 55.
@@ -401,15 +355,8 @@ C.~Buck, F.X.~Hartmann, D.~Motta, S.~Sch\"onert, \emph{Energy transfer and light
 \bibitem{aberle11}
 C.~Aberle, C.~Buck, F.X.~Hartmann and S.~Sch\"onert, \emph{Light yield and energy transfer in a new Gd-loaded liquid scintillator}, \emph{Chem. Phys. Lett.} {\bf 516} (2011) 257.  
 
-
-\bibitem{hamamatsupmt}
-Hamamatsu Photonics K.K., \emph{Photomultiplier Tubes R1828-01, R2059} (data sheet), accessed March, 2014: http://www.hamamatsu.com/resources/pdf/etd/R1828-01\_R2059\_TPMH1259E04.pdf.
-
-\bibitem{hamamatsubase}
-Hamamatsu Photonics K.K., \emph{D-Type Socket Assemblies} (data sheet), accessed March, 2014: http://www.hamamatsu.com/resources/pdf/etd/PMT\_92-103\_e.pdf.
-
-\bibitem{alazartech}
-http://www.alazartech.com (2014).
+\bibitem{shimadzu}
+http://www.spi-inc.com, 2015.
 
 \end{thebibliography}
 \end{document}
